# An-AI-driven-Search-by-Image-Engine-on-KV260

./: LICENSE  README.md
KV260_Vitis/: dpu_conf.vh
KV260_Vitis/code/: build.sh
KV260_Vitis/code/include/: accelerator.h  crow_all.h  dpu.h
KV260_Vitis/code/src/: accelerator.cpp  dpu.cpp  main.cpp
KV260_Vitis/kgraph_dpu_system/: .cproject  .project  kgraph_dpu_system.sprj
KV260_Vivado/: KV260_Vivado.tcl  KV260_Vivado.xpr
Kgraph_development/KV260_Kgraph/: CMakeCache.txt  CMakeLists.txt  KV260_Knn_hamming  KV260_Knn_hamming.cpp  KV260_dpu_tran_hash2bin  KV260_dpu_tran_hash2bin.cpp  Makefile  README.md  asci2binary  asci2binary.cpp  bin_hash_code.txt  cmake_install.cmake  dval.txt  index  kgraph.cpp  kgraph.h  kv260_hash_code  kv260_test_hash_code.txt  log.txt  search
Kgraph_development/KV260_Kgraph/python/: 07_Fc7.txt  21_fc7.txt  Untitled.ipynb  Untitled1.ipynb  bin_label.txt  hash_02.txt
Kgraph_development/KV260_Kgraph/python/.ipynb_checkpoints/: Untitled1-checkpoint.ipynb
Kgraph_development/KV260_fuse_graph_index_hashcode/: kv260_bin  kv260_bin.c
Model_development/DPU_Deployment/: backup  compiler.sh  deploy.prototxt  md5sum.txt  meta.json  quantization.sh  quantized_test.sh
Model_development/DeepBinaryCode/: Makefile.config
Model_development/Hash-MiniGoogleNet/: DPU_hash.prototxt  DPU_log.txt
Petalinux/: gen_dt.tcl
Petalinux/dt_output/: device-tree.mss  pcw.dtsi  pl.dtbo  pl.dtsi  system-top.dts  system.dts
image/: 1_Framework.eps  2_GraphSearchEngine.eps  Hardware.eps  performance.eps
(+184 files in other folders)
